--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 mock-server/node_modules
 Boostrap/node_modules
 JS-Modules/use case/ES6 Module/node_modules
+shopping-app/~$opping-site-coding-exercise.doc
