home page styling updated

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Boostrap/node_modules
 JS-Modules/use case/ES6 Module/node_modules
 shopping-app/~$opping-site-coding-exercise.doc
 shopping-app/.firebase
+shopping-app/.firebase/hosting.YnVpbGQ.cache
